word wrap fixes

--- a/src/app/components/alerts/alerts.component.scss
+++ b/src/app/components/alerts/alerts.component.scss
@@ -19,6 +19,8 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
+  overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 .alerts-list::-webkit-scrollbar-track
